--- a/.github/workflows/publish-flutter.yml
+++ b/.github/workflows/publish-flutter.yml
@@ -23,6 +23,9 @@ on:
       REPO_SSH_KEY:
         description: 'ssh key to commit to the breez-liquid-sdk-flutter repository'
         required: true
+      SWIFT_RELEASE_TOKEN:
+        description: 'github token to release to the breez-liquid-sdk-flutter repository'
+        required: true
 
 jobs:
   build-tag-release:
@@ -50,37 +53,42 @@ jobs:
       - name: Copy package files
         working-directory: dist
         run: |
-          rm -r ios
-          rm -r android
-          rm -r lib
-          cp -r ../build/lib/bindings/langs/flutter/ios .
-          mv ios/breez_liquid_sdk.podspec.production ios/breez_liquid_sdk.podspec
-          cp -r ../build/lib/bindings/langs/flutter/android .
-          mv langs/android/build.gradle.production langs/android/build.gradle
-          cp -r ../build/lib/bindings/langs/flutter/lib .
-          cp ../build/lib/bindings/langs/flutter/pubspec.yaml .
-          cp ../build/lib/bindings/langs/flutter/pubspec.lock .
+          rm -rf android
+          rm -rf ios
+          rm -rf lib
+          cp -r ../build/packages/flutter/android .
+          cp -r ../build/packages/flutter/ios .
+          cp -r ../build/packages/flutter/lib .
+          cp -r ../build/lib/bindings/langs/flutter/breez_liquid_sdk/include/breez_liquid_sdk.h ios/Classes
+          cp ../build/packages/flutter/analysis_options.yaml .
+          cp ../build/packages/flutter/pubspec.yaml .
+          cp ../build/packages/flutter/pubspec_overrides.yaml .
 
       - name: Copy docs
         working-directory: dist
         run: |
-          cp ../build/lib/bindings/langs/flutter/README.pub.md README.md || true
-          cp ../build/lib/bindings/langs/flutter/CHANGELOG.md . || true
+          cp ../build/packages/flutter/CHANGELOG.md . || true
+          cp ../build/packages/flutter/LICENSE . || true
+          cp ../build/packages/flutter/README.md . || true
 
       - uses: actions/download-artifact@v3
         with:
-          name: bindings-swift
-          path: dist/ios/bindings-swift/Sources/BreezLiquidSDK/
+          name: bindings-flutter
+          path: bindings/
 
       - name: Set package version
         working-directory: dist
         run: |
           sed -i.bak -e 's/version:.*/version: ${{ inputs.package-version }}/' pubspec.yaml
-          sed -i.bak -e "s/^version .*/version '${{ inputs.package-version }}'/" langs/android/build.gradle
-          sed -i.bak -e "s/^tag_version = .*/tag_version = '${{ inputs.package-version }}'/" ios/breez_liquid_sdk.podspec
+          sed -i.bak -e 's/path:.*/git:\n      url: git@github.com:breez\/breez-liquid-sdk-dart.git\n      ref: ${{ inputs.package-version }}/' pubspec_overrides.yaml
+          sed -i.bak -e "s/^version .*/version '${{ inputs.package-version }}'/" android/build.gradle
+          sed -i.bak -e 's/set(TagName.*/set(TagName "v${{ inputs.package-version }}")/' android/CMakeLists.txt
+          sed -i.bak -e "s/^version = .*/version = '${{ inputs.package-version }}'/" ios/flutter_breez_liquid.podspec
           rm pubspec.yaml.bak
-          rm langs/android/build.gradle.bak
-          rm ios/breez_liquid_sdk.podspec.bak
+          rm pubspec_overrides.yaml.bak
+          rm android/build.gradle.bak
+          rm android/CMakeLists.txt.bak
+          rm ios/flutter_breez_liquid.podspec.bak
 
       - name: Archive flutter release
         uses: actions/upload-artifact@v3
@@ -97,7 +105,21 @@ jobs:
           git config --global user.email github-actions@github.com
           git config --global user.name github-actions
           git add .
-          git commit -m "Update Breez SDK Flutter package to version v${{ inputs.package-version }}"
+          git commit -m "Update Flutter package to version v${{ inputs.package-version }}"
           git push
           git tag v${{ inputs.package-version }} -m "v${{ inputs.package-version }}"
           git push --tags
+
+      - name: Release and attach binary artifacts
+        if: ${{ inputs.publish }}
+        uses: softprops/action-gh-release@v2
+        with:
+          repository: breez/breez-liquid-sdk-flutter
+          files: |
+            bindings/android.tar.gz
+            bindings/breez_liquid_sdk.xcframework.zip
+            bindings/other.tar.gz
+          tag_name: v${{ inputs.package-version || '0.0.1' }}
+          generate_release_notes: false
+          token: ${{ secrets.SWIFT_RELEASE_TOKEN }}
+          prerelease: true
