--- a/packages/flutter/example/ios/Runner/Info.plist
+++ b/packages/flutter/example/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera permission is required for QR code scanning.</string>
 </dict>
 </plist>
