--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -31,6 +31,8 @@ rusqlite_migration = "1.0"
 sdk-common = { git = "https://github.com/breez/breez-sdk", branch = "main" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
+strum = "0.25"
+strum_macros = "0.25"
 thiserror = { workspace = true }
 tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 openssl = { version = "0.10", features = ["vendored"] }
