--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -49,8 +49,7 @@ hex = "0.4"
 reqwest = { version = "=0.11.20", features = ["json"] }
 electrum-client = { version = "0.19.0" }
 zbase32 = "0.1.2"
-x509-parser = { version = "0.16.0", features = ["verify"] }
-base64 = "0.22.1"
+x509-parser = { version = "0.16.0" }
 
 [dev-dependencies]
 lazy_static = "1.5.0"
