--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -27,7 +27,9 @@ lwk_wollet = { git = "https://github.com/dangeross/lwk", branch = "savage-full-s
 #lwk_wollet = "0.7.0"
 rusqlite = { version = "0.31", features = ["backup", "bundled"] }
 rusqlite_migration = "1.0"
-sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "441a9fd50c32098b2887e960c8a4bcc5956da1af", features = ["liquid"]}
+sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "441a9fd50c32098b2887e960c8a4bcc5956da1af", features = [
+  "liquid",
+] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 strum = "0.25"
@@ -51,7 +53,9 @@ x509-parser = { version = "0.16.0" }
 tempfile = "3"
 tonic = { version = "0.12.3", features = ["tls"] }
 prost = "0.13.3"
-uuid = { version = "1.8.0", features = ["v4"] }
+ecies = "0.2.7"
+semver = "1.0.23"
+lazy_static = "1.5.0"
 
 [dev-dependencies]
 lazy_static = "1.5.0"
