--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@breeztech/react-native-breez-sdk-liquid",
-  "version": "0.5.0-rc8",
+  "version": "0.5.1",
   "description": "React Native Breez Liquid SDK",
   "repository": "https://github.com/breez/breez-sdk-liquid",
   "author": "Breez <contact@breez.technology> (https://github.com/breez)",
