--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -54,6 +54,9 @@ electrum-client = { version = "0.19.0" }
 zbase32 = "0.1.2"
 x509-parser = { version = "0.16.0" }
 tempfile = "3"
+tonic = { version = "0.12.3", features = ["tls"] }
+prost = "0.13.3"
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [dev-dependencies]
 lazy_static = "1.5.0"
@@ -64,6 +67,7 @@ uuid = { version = "1.8.0", features = ["v4"] }
 [build-dependencies]
 anyhow = { version = "1.0.79", features = ["backtrace"] }
 glob = "0.3.1"
+tonic-build = "0.12.3"
 
 # Pin these versions to fix iOS build issues
 [target.'cfg(target_os = "ios")'.build-dependencies]
