--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -53,10 +53,11 @@ x509-parser = { version = "0.16.0" }
 tempfile = "3"
 tonic = { version = "0.12.3", features = ["tls"] }
 prost = "0.13.3"
-uuid = { version = "1.8.0", features = ["v4"] }
+ecies = "0.2.7"
+semver = "1.0.23"
+lazy_static = "1.5.0"
 
 [dev-dependencies]
-lazy_static = "1.5.0"
 paste = "1.0.15"
 tempdir = "0.3.7"
 uuid = { version = "1.8.0", features = ["v4"] }
