--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -14,8 +14,7 @@ frb = ["dep:flutter_rust_bridge"]
 [dependencies]
 anyhow = { workspace = true }
 bip39 = "2.0.0"
-#boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", branch = "trunk" }
-boltz-client = { git = "https://github.com/ok300/boltz-rust", branch = "ok300-support-quote" }
+boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", branch = "trunk" }
 chrono = "0.4"
 env_logger = "0.11"
 flutter_rust_bridge = { version = "=2.4.0", features = [
