--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -54,6 +54,8 @@ electrum-client = { version = "0.19.0" }
 zbase32 = "0.1.2"
 x509-parser = { version = "0.16.0" }
 tempfile = "3"
+domain = { version = "0.8.0", features = ["resolv"] }
+bytes = "1.0"
 
 [dev-dependencies]
 lazy_static = "1.5.0"
