--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -20,9 +20,7 @@ bip39 = "2.0.0"
 boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", branch = "trunk" }
 chrono = "0.4"
 env_logger = "0.11"
-flutter_rust_bridge = { version = "=2.7.0", features = [
-    "chrono",
-], optional = true }
+flutter_rust_bridge = { version = "=2.7.0", features = ["chrono"], optional = true }
 log = { workspace = true }
 lwk_common = "0.7.0"
 lwk_signer = "0.7.0"
