--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -375,9 +375,9 @@ jobs:
           # In this test, we reference the checked out repo (e.g. this PR branch)
           cargo add --path ../lib/core breez-sdk-liquid
           
-          # Add the secp256k1-zkp patch: https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits
+          # Add the secp256k1-zkp patch: https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
           echo "[patch.crates-io]" >> Cargo.toml
-          echo "secp256k1-zkp = {git = 'https://github.com/sanket1729/rust-secp256k1-zkp.git', rev = '60e631c24588a0c9e271badd61959294848c665d'}" >> Cargo.toml
+          echo "secp256k1-zkp = {git = 'https://github.com/dangeross/rust-secp256k1-zkp.git', rev = '57d29b15269ca2ce3c3b118b6a72b66c1169e7b1'}" >> Cargo.toml
           # Propagate the patch in Cargo.lock
           rm Cargo.lock
           cargo update --package secp256k1-zkp
