--- a/packages/react-native/example/android/app/build.gradle
+++ b/packages/react-native/example/android/app/build.gradle
@@ -139,7 +139,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "0.4.0-rc3"
+        versionName "0.6.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
         buildConfigField "String", "BREEZ_API_KEY", project.property('BREEZ_API_KEY')
 
