--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = { workspace = true }
 bip39 = "2.0.0"
 boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "3bbc0ddb068df7f12a1b8b37cfbb353f4db36fe5" }
 chrono = "0.4"
+derivative = "2.2.0"
 env_logger = "0.11"
 flutter_rust_bridge = { version = "=2.7.0", features = [
     "chrono",
