--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -28,7 +28,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.6.0-dev1"
+version = "0.6.1"
 
 [workspace.lints.clippy]
 empty_line_after_doc_comments = "allow"
